# talks

logging-antipatterns/: index.html  notes.md  rust-log-highlight.js
logging-antipatterns/lib/plugin/highlight/: default.css
logging-antipatterns/rust_project/: Cargo.toml  copy_log.sh
logging-antipatterns/rust_project/src/: main.rs
logging-antipatterns/theme/: hoodie-solarized.css  talk.css
rust4cpp/: add_playpen.js  index.html  index.md  package.json  update-revealjs.sh
rust4cpp/theme/: hoodie-solarized.css  talk.css
rust4cpp/theme/fonts/: .directory  fonts.css
ta-rust/slides/: add_playpen.js  index.htm
wasm/: gamepad.js  index.html  package.json  talk.css  talk.md
wasm/examples/gadgets/: Cargo.toml  build.sh  gadgets.js  gadgets_bg.wasm
wasm/examples/gadgets/src/: lib.rs  person.rs
wasm/examples/rust-lib/: index.html
wasm/examples/rust-lib/src/: lib.rs
wasm/lib/: headjs  reveal.js
wasm/theme/: hoodie-solarized.css
wasm_v1/: .gitignore  README.md  index.html  package.json
wasm_v1/examples/gadgets/: .gitignore  build.sh
wasm_v1/examples/gadgets/src/: lib.rs
wasm_v1/examples/lsb/: Cargo.toml
wasm_v1/examples/rust-lib/: rust-lib.wasm
wasm_v1/examples/rust-lib/src/: lib.rs
wasm_v2/: gamepad.js  index.html  talk.md
wasm_v2/examples/html/src/: lib.rs
wasm_v2/examples/lsb/: Cargo.toml
wasm_v2/examples/rust-lib/: README.md  build.sh
wasm_v3/: README.md  index.html  package.json
wasm_v3/examples/html/: Cargo.toml  index.html
wasm_v3/examples/rust-lib/: Cargo.toml  index.html
wasm_v3/theme/: hoodie-solarized.css  talk.css
