[package]
name = "html"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.37"
js-sys = "0.3.14"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'HtmlElement',
  'Node',
  'EventTarget',
  'KeyboardEvent'
]

[lib]
crate-type = ["cdylib", "rlib"]
